# ell1fit

./: .readthedocs.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: conf.py  index.rst
docs/ell1fit/: index.rst
ell1fit/: __init__.py  conftest.py  create_parfile.py  ell1fit.py  logging.py  prova_aggiunta.txt
ell1fit/tests/: test_ell1fit.py  test_execution.py
ell1fit/tests/data/: events0.nc  events0.par  events1.nc
licenses/: LICENSE.rst
