[metadata]
name = ell1fit
author = Matteo Bachetti
author_email = matteo@matteobachetti.it
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://github.com/matteobachetti/ell1fit
description = Fit an ELL1 orbital model to pulsar data, accounting for spin derivatives
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = matteobachetti/ell1fit

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    emcee
    matplotlib
    pint-pulsar
    numba
    scipy
    corner
    stingray
    hendrics


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
ell1fit = data/*

[tool:pytest]
testpaths = "ell1fit" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[options.entry_points]
console_scripts =
    ell1fit = ell1fit.ell1fit:main

[coverage:run]
omit =
    ell1fit/_astropy_init*
    ell1fit/conftest.py
    ell1fit/*setup_package*
    ell1fit/tests/*
    ell1fit/*/tests/*
    ell1fit/extern/*
    ell1fit/version*
    */ell1fit/_astropy_init*
    */ell1fit/conftest.py
    */ell1fit/*setup_package*
    */ell1fit/tests/*
    */ell1fit/*/tests/*
    */ell1fit/extern/*
    */ell1fit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
